--- a/src/less/mediaQ.less
+++ b/src/less/mediaQ.less
@@ -8,16 +8,21 @@
 		.item{
 			max-width: 225px!important;
 			max-height: 155px!important;
+			height: 155px;
 			.main-transition();
 			a{
-				min-height: 150px;
-				line-height: 155px;
-				max-width: 125px;
-				margin:50px; 
+				width: 215px;
+				height: 130px;
+				margin:auto; //No horizontal align
+				padding-left:44px;//Important
+				padding-right: 44px;
+				margin-bottom:10px;
+				margin-top:10px;//Important
+				line-height: 165px;//Margin-top + height sin borde
 				transition:max-width .4s;
 				.main-transition();
 				.item-image{
-					//height: 150px;
+					width: 130px;
 				}
 				
 			}
